# End-to-End-Reinforcement-Learning-using-Human-Feedback

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/rlhf_pipeline/: __init__.py  agent_env.py  agent_policy.py  benchmark.py  cli.py  data.py  features.py  memory.py  ollama_client.py  policy.py  reward_features.py  reward_model.py  rl.py  tool_registry.py  tools.py  train_reward.py  train_rl.py  train_sft.py  trajectories.py
tests/: __init__.py  test_agent_pipeline.py
