[project]
name = "rlhf-pipeline"
version = "0.1.0"
description = "End-to-end RLHF pipeline with synthetic preference data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.scripts]
rlhf-pipeline = "rlhf_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
